- fixed region select modal on mobile - made the fonts bigger on mobile (closes #29) - fixed select styling on mobile - fixed card-menu styling on mobile - fixed input styling on mobile

--- a/src/app/shared/components/select/option.component.scss
+++ b/src/app/shared/components/select/option.component.scss
@@ -3,6 +3,11 @@
 .bio-option {
   height: 35px;
   min-height: 35px;
+  @media only screen and (max-width: v.$mobile-width) {
+    height: 40px;
+    min-height: 40px;
+  }
+
   padding: 0.5rem 1rem;
   outline: none;
   cursor: pointer;
