--- a/src/styles/_card-menu.scss
+++ b/src/styles/_card-menu.scss
@@ -31,6 +31,14 @@
     left: 1rem;
   }
 
+  @media only screen and (max-width: v.$mobile-width) {
+    > .icon {
+      top: 0.5rem;
+      left: 0.5rem;
+    }
+    align-items: flex-end;
+  }
+
   &:hover,
   &:focus {
     background-color: v.$accent-500;
