--- a/src/styles/_typo.scss
+++ b/src/styles/_typo.scss
@@ -1,5 +1,12 @@
 @use 'variables' as v;
 
+html {
+  font-size: 16px;
+  @media only screen and (max-width: v.$mobile-width) {
+    font-size: 18px;
+  }
+}
+
 body {
   font-family: Roboto, Helvetica Neue Light, Helvetica Neue, Helvetica, Arial, Lucida Grande, sans-serif;
   color: white;
